[gd_scene load_steps=12 format=3 uid="uid://lqggmxm0wx8n"]

[ext_resource type="Shader" uid="uid://cr5t8vct8mn6q" path="res://shaders/blur_shader_pause_menu.gdshader" id="1_87u1d"]
[ext_resource type="Script" uid="uid://b66i0ilpj0360" path="res://scripts/huds/pause_menu.gd" id="1_du8mq"]
[ext_resource type="Theme" uid="uid://cg8dsx2mjficm" path="res://assets/button-menu-art/title.tres" id="1_iny2r"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vtvva"]
shader = ExtResource("1_87u1d")
shader_parameter/lod = 0.0

[sub_resource type="InputEventAction" id="InputEventAction_du8mq"]
action = &"ui_cancel"

[sub_resource type="Shortcut" id="Shortcut_vtvva"]
events = [SubResource("InputEventAction_du8mq")]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_87u1d"]

[sub_resource type="Animation" id="Animation_du8mq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("bg_overlay:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("bg_overlay/menu_holder:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_87u1d"]
resource_name = "pause_game"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("bg_overlay:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("bg_overlay/menu_holder:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_4h8c5"]
resource_name = "resume_game"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("bg_overlay:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("bg_overlay/menu_holder:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vtvva"]
_data = {
&"RESET": SubResource("Animation_du8mq"),
&"pause_game": SubResource("Animation_87u1d"),
&"resume_game": SubResource("Animation_4h8c5")
}

[node name="pause_menu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_du8mq")

[node name="bg_overlay" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_vtvva")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="menu_holder" type="VBoxContainer" parent="bg_overlay"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -85.5
offset_top = -20.0
offset_right = 85.5
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="btn_resume" type="Button" parent="bg_overlay/menu_holder"]
layout_mode = 2
theme = ExtResource("1_iny2r")
shortcut = SubResource("Shortcut_vtvva")
text = "Continuar"

[node name="HSeparator3" type="HSeparator" parent="bg_overlay/menu_holder"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_87u1d")

[node name="btn_options" type="Button" parent="bg_overlay/menu_holder"]
layout_mode = 2
theme = ExtResource("1_iny2r")
text = "OPcoes"

[node name="HSeparator4" type="HSeparator" parent="bg_overlay/menu_holder"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_87u1d")

[node name="btn_quit" type="Button" parent="bg_overlay/menu_holder"]
layout_mode = 2
theme = ExtResource("1_iny2r")
text = "sair do jogo"

[node name="animator" type="AnimationPlayer" parent="."]
process_mode = 3
libraries = {
&"": SubResource("AnimationLibrary_vtvva")
}

[connection signal="pressed" from="bg_overlay/menu_holder/btn_resume" to="." method="_on_btn_resume_pressed"]
[connection signal="pressed" from="bg_overlay/menu_holder/btn_options" to="." method="_on_btn_options_pressed"]
[connection signal="pressed" from="bg_overlay/menu_holder/btn_quit" to="." method="_on_btn_quit_pressed"]
